--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
@@ -23,8 +25,11 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-slick": "^0.30.2",
+    "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "three": "^0.165.0",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
